# AWS_NOVA_HACKATHON

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent/skills/: README.md
.agent/skills/api_testing/: SKILL.md
.agent/skills/aws_bedrock_integration/: SKILL.md
.agent/skills/database_migrations/: SKILL.md
.agent/skills/frontend_development/: SKILL.md
.agent/skills/jd_optimization/: SKILL.md
.agent/skills/semantic_search/: SKILL.md
.agent/skills/workflow_management/: SKILL.md
.agent/workflows/: job-posting.md
alembic/: env.py
alembic/versions/: 6cb6c0e15219_add_timezone_support.py  91fe6c939bb0_add_owner_id_to_jobs.py  cbef5bcbfb6f_add_foreign_keys_and_indexes.py  f8a3b2c4d5e6_add_google_for_jobs_columns.py
app/: __init__.py  main.py
app/ai/: __init__.py  bedrock_client.py  bedrock_utils.py  client.py  constants.py  embeddings.py  exceptions.py  jd_generator.py  pdf_parser.py  prompts.py  providers.py  voice_agent.py  voice_scoring.py
app/ai/tests/: test_bedrock.py  test_embeddings.py
app/auth/: constants.py  exceptions.py  jwt_dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
app/auth/tests/: test_jwt.py  test_service.py
app/candidates/: exceptions.py  models.py  repository.py  router.py  schemas.py  services.py
app/candidates/tests/: __init__.py  test_service.py
app/careers/: __init__.py  constants.py  dependencies.py  jsonld_generator.py  repository.py  router.py  service.py  xml_generator.py
app/careers/tests/: __init__.py  test_service.py
app/core/: config.py  constants.py  database.py  email.py  exceptions.py  locking.py  logging.py
app/core/tests/: test_config.py  test_exceptions.py
app/interviews/: exceptions.py  models.py  router.py  scheduler.py  schemas.py  services.py
app/interviews/tests/: __init__.py
app/jobs/: constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py
app/jobs/schemas/: __init__.py  domain.py  enums.py  fields.py  requests.py  responses.py
app/jobs/services/: __init__.py  access_control.py  embedding_manager.py  jd_manager.py  job_service.py  status_builder.py
app/jobs/tests/: test_router.py  test_service.py
app/users/: exceptions.py  router.py  schemas.py
app/workflow/: __init__.py  builder.py  checkpoints.py  constants.py  edges.py  engine.py  exceptions.py  helpers.py  nodes.py  state.py
app/workflow/tests/: test_engine.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: error.tsx
frontend/app/(auth)/forgot-password/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(auth)/reset-password/: page.tsx
frontend/app/(auth)/verify-otp/: page.tsx
frontend/app/(dashboard)/: error.tsx  layout.tsx
frontend/app/(dashboard)/candidates/: page.tsx
frontend/app/(dashboard)/dashboard/: loading.tsx  page.tsx
frontend/app/(dashboard)/jobs/: page.tsx
frontend/app/(dashboard)/jobs/[id]/: loading.tsx  page.tsx
frontend/app/(dashboard)/jobs/[id]/candidates/: page.tsx
frontend/app/(dashboard)/jobs/new/: loading.tsx  page.tsx
frontend/app/careers/: layout-client.tsx  layout.tsx  page.tsx
frontend/app/careers/[id]/: ApplicationModal.tsx  ApplyButton.tsx  page.tsx
frontend/components/: theme-toggle.tsx
frontend/components/candidates/: CandidatesTable.tsx
frontend/components/ui/: Button.tsx  Input.tsx  Toast.tsx  mode-toggle.tsx
frontend/features/auth/components/: AuthLayout.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/features/auth/types/: index.ts
frontend/features/dashboard/components/: DashboardStats.tsx  Header.tsx  Sidebar.tsx  SidebarItem.tsx  SignOutButton.tsx
frontend/features/jobs/components/: DeleteJobModal.tsx  EditJDModal.tsx  JDLoadingState.tsx  JDTabs.tsx  JobCard.tsx  JobHeader.tsx  RegenerateJDModal.tsx  WorkflowProgressBar.tsx
frontend/features/jobs/components/views/: JobDetailView.tsx
frontend/features/jobs/hooks/: useJobActions.ts  useJobPolling.ts  useJobs.ts
frontend/types/: index.ts
scripts/: test_endpoints_live.py
tests/: conftest.py  test_api.py  test_endpoints.py  test_models.py  test_services.py
tests/workflow/: __init__.py  test_edges.py  test_nodes.py  test_optimization_loop.py  test_optimization_standalone.py  test_state_validation.py
